tests/saws/fixtures/invalid/01_no_header.saws
// §5: Empty document (no header row) is a parse error
// only comments here
